--- a/bio.html
+++ b/bio.html
@@ -13,6 +13,12 @@
 				<p class="paragrafo-principal">Um revolucionario apresentador brasileiro.</p>
 			</div>
 			<!-- Imagem de destaque-->
+			<div = "img-destaque">
+				<figure>
+					<img alt="silvio santos rindo" src="img/silvio.jpeg">
+					<figcaption>Silvio encanta todos com seu carisma</figcaption>
+				</figure>
+			</div>
 		</div>
 	</body>
 </html>
