--- a/bio.html
+++ b/bio.html
@@ -13,11 +13,24 @@
 				<p class="paragrafo-principal">Um revolucionario apresentador brasileiro.</p>
 			</div>
 			<!-- Imagem de destaque-->
-			<div = "img-destaque">
+			<div class= "img-destaque">
 				<figure>
 					<img alt="silvio santos rindo" src="img/silvio.jpeg">
 					<figcaption>Silvio encanta todos com seu carisma</figcaption>
 				</figure>
+			</div>
+			<!-- Biografia -->
+			<div class="biografia-container">
+				<h2>Um pouco de sua historia...</h2>
+				<p>
+					Silvio Santos nasceu em 1930, começou a trabalhar como comelo com 14 anos, e foi trabalhando que aprendeu a negociar e a expor sua voz.
+				</p>
+				<p>
+					Foi convidado a ser locutor na Rádio Guanabara, mas não ficou por lá muito tempo, pois como camelo ganhava mais.
+				</p>
+				<p>
+					
+				</p>
 			</div>
 		</div>
 	</body>
