--- a/bio.html
+++ b/bio.html
@@ -29,9 +29,16 @@
 					Foi convidado a ser locutor na Rádio Guanabara, mas não ficou por lá muito tempo, pois como camelo ganhava mais.
 				</p>
 				<p>
-					
+					Depois de servir ao exército, criou uma maneira de tornar as viagens mais dinamicas nas embarcações que iam do Rio de Janeiro a Niterói: criou um serviço de alto falantes para anunciar os produtos negociados. Posteriormente, entrou para o ramo de shows e sorteios de loterias.	
+				</p>
+				<p>
+					Em 1962 começou a sua carreira na televisao, com o programa "Vamos brincar de Forca", transmitido pela TV Paulista.
+				</p>
+				<p>
+				Passou pela Rede Tupi e Rede Record, nesta, conseguiu <span class="destaque"> 50% das açoes da TV</span>. Mas o grande empreendimento de Silvio Santos seria o SBT - Sistema Brasileiro de Televisão, canal próprio, onde apresentaria o seu tradicional programa "Silvio Santos" e venderia outros produtos, como o Baú da Felicidade, empresa de venda de carnes e sorteios. 
 				</p>
 			</div>
+			<--! Primeira citacao -->
 		</div>
 	</body>
 </html>
